# shacler-generator

./: .gitmodules  README.md  main.py  pyproject.toml
docs/: shapes.md
shacl_doc_generator/: generator.py  models.py  parser.py
